syntax = "proto3";
package endpoint_api;
option go_package = "github.com/lexatic/web-backend/protos/lexatic-backend";
import "google/protobuf/struct.proto";

message InvokerError  {
    uint64 errorCode = 1 [jstype = JS_STRING];
    string errorMessage = 2;
    string humanMessage = 3;
}

message EndpointDefnition {
    uint64 endpointId = 1 [jstype = JS_STRING];
    string version = 2;
}

message OverrideOption {
    string optionName = 1;
    string value = 2;
}
message InvokeRequest {
    EndpointDefnition endpoint = 1;
    google.protobuf.Struct args = 2;
    repeated OverrideOption options = 3;

}
message InvokeResponse {
    int32 code = 1;
    bool success = 2;
    google.protobuf.Struct data = 3;
    optional InvokerError error = 4;
}


message ProbeRequest {
    uint64 requestId = 1 [jstype = JS_STRING];
    google.protobuf.Struct data = 2;
}

message ProbeResponse {
    int32 code = 1;
    bool success = 2;
    google.protobuf.Struct data = 3;
    optional InvokerError error = 4;
}

service Deployment {
 rpc Invoke(InvokeRequest) returns (InvokeResponse);
 rpc Probe(ProbeRequest) returns (ProbeResponse);
}